--- a/assets/css/src/variables.scss
+++ b/assets/css/src/variables.scss
@@ -1,6 +1,6 @@
 // Colours
-$pimary-colour: rgb(102, 102, 102);
-$secondary-colour: rgb(160, 164, 171);
+$primary-color: rgb(102, 102, 102);
+$secondary-color: rgb(160, 164, 171);
 $link-color: rgb(0, 169, 220);
 $link-color-trans: rgba($link-color, 0.6);
 $shadow-color: rgb(0, 0, 0);
